--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://hernandox.github.io/"
 languageCode = "en-us"
-title = "aqweqweqasd asdasdasdas dasdasd"
+title = "hernandox"
 theme = "hello-friend"
