--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://mcwertgaming.github.io/"
+baseurl = "https://hernandox.github.io/"
 languageCode = "en-us"
 copyright = "This blog is published under the terms of the MIT License. Don't distribute or publish this blogs posts without permission!"
 rssLimit = 20
